{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 17,
  "lineage": "5663e173-8555-767c-8f87-7d290d047078",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/0b996307-7c6a-462a-990b-568412d43da3/resourceGroups/bambam-resources/providers/Microsoft.Network/loadBalancers/bambam-lb/frontendIPConfigurations/PublicIPAddress",
                "name": "PublicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/0b996307-7c6a-462a-990b-568412d43da3/resourceGroups/bambam-resources/providers/Microsoft.Network/publicIPAddresses/bambam-public-ip"
              }
            ],
            "id": "/subscriptions/0b996307-7c6a-462a-990b-568412d43da3/resourceGroups/bambam-resources/providers/Microsoft.Network/loadBalancers/bambam-lb",
            "location": "eastus",
            "name": "bambam-lb",
            "resource_group_name": "bambam-resources",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "project_stage": "development"
            }
          },
          "dependencies": [
            "azurerm_public_ip.public_ip",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0b996307-7c6a-462a-990b-568412d43da3/resourceGroups/bambam-resources/providers/Microsoft.Network/loadBalancers/bambam-lb/backendAddressPools/bambam-lb-pool",
            "loadbalancer_id": "/subscriptions/0b996307-7c6a-462a-990b-568412d43da3/resourceGroups/bambam-resources/providers/Microsoft.Network/loadBalancers/bambam-lb",
            "name": "bambam-lb-pool"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_public_ip.public_ip",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/0b996307-7c6a-462a-990b-568412d43da3/resourceGroups/bambam-resources/providers/Microsoft.Network/networkInterfaces/bambam-nic-0",
            "internal_domain_name_suffix": "4gh0wllw0wpexcwdymocggreyg.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal-nic-ip",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/0b996307-7c6a-462a-990b-568412d43da3/resourceGroups/bambam-resources/providers/Microsoft.Network/virtualNetworks/bambam-network/subnets/internal"
              }
            ],
            "location": "eastus",
            "name": "bambam-nic-0",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "bambam-resources",
            "tags": {
              "project_stage": "development"
            }
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_subnet.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/0b996307-7c6a-462a-990b-568412d43da3/resourceGroups/bambam-resources/providers/Microsoft.Network/networkInterfaces/bambam-nic-1",
            "internal_domain_name_suffix": "4gh0wllw0wpexcwdymocggreyg.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal-nic-ip",
                "primary": true,
                "private_ip_address": "10.0.2.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/0b996307-7c6a-462a-990b-568412d43da3/resourceGroups/bambam-resources/providers/Microsoft.Network/virtualNetworks/bambam-network/subnets/internal"
              }
            ],
            "location": "eastus",
            "name": "bambam-nic-1",
            "private_ip_address": "10.0.2.5",
            "private_ip_addresses": [
              "10.0.2.5"
            ],
            "resource_group_name": "bambam-resources",
            "tags": {
              "project_stage": "development"
            }
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_subnet.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0b996307-7c6a-462a-990b-568412d43da3/resourceGroups/bambam-resources/providers/Microsoft.Network/networkSecurityGroups/bambam-nsg",
            "location": "eastus",
            "name": "bambam-nsg",
            "resource_group_name": "bambam-resources",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow all other VMs",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "deny-internet-direct-access",
                "priority": 120,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "project_stage": "development"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow-VMs",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/0b996307-7c6a-462a-990b-568412d43da3/resourceGroups/bambam-resources/providers/Microsoft.Network/networkSecurityGroups/bambam-nsg/securityRules/allow all other VMs",
            "name": "allow all other VMs",
            "network_security_group_name": "bambam-nsg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "bambam-resources",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.main",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "deny-internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/0b996307-7c6a-462a-990b-568412d43da3/resourceGroups/bambam-resources/providers/Microsoft.Network/networkSecurityGroups/bambam-nsg/securityRules/deny-internet-direct-access",
            "name": "deny-internet-direct-access",
            "network_security_group_name": "bambam-nsg",
            "priority": 120,
            "protocol": "*",
            "resource_group_name": "bambam-resources",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.main",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/0b996307-7c6a-462a-990b-568412d43da3/resourceGroups/bambam-resources/providers/Microsoft.Network/publicIPAddresses/bambam-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.25.106.37",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "bambam-public-ip",
            "resource_group_name": "bambam-resources",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "project_stage": "development"
            }
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/0b996307-7c6a-462a-990b-568412d43da3/resourceGroups/bambam-resources/providers/Microsoft.Network/virtualNetworks/bambam-network/subnets/internal",
            "name": "internal",
            "resource_group_name": "bambam-resources",
            "virtual_network_name": "bambam-network"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/22"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "2dab8ff1-d576-4b9e-8ac3-c31c231a24c6",
            "id": "/subscriptions/0b996307-7c6a-462a-990b-568412d43da3/resourceGroups/bambam-resources/providers/Microsoft.Network/virtualNetworks/bambam-network",
            "location": "eastus",
            "name": "bambam-network",
            "resource_group_name": "bambam-resources",
            "subnet": [
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/0b996307-7c6a-462a-990b-568412d43da3/resourceGroups/bambam-resources/providers/Microsoft.Network/virtualNetworks/bambam-network/subnets/internal",
                "name": "internal"
              }
            ],
            "tags": {
              "project_stage": "development"
            }
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    }
  ]
}